Fix header and footer on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,8 @@ header {
 	flex-direction: row;
 	justify-content: space-between;
 	padding: 20px;
-	position: sticky
+	position: sticky;
+	width: 100%;
 }
 
 header h1 {
@@ -186,6 +187,7 @@ footer {
 	align-items: center;
 	background-color: var(--color1);
 	margin: 10px auto 0 auto;
+	width: 100%;
 }
 
 #contact-container {
